[package]
name = "wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
image = "0.25"
imageproc = "0.25"
kornia = "0.1.9"
lru = "0.16.3"
petgraph = "0.8"
serde = { version = "1.0", features = ["derive"] }
specta = { version = "2.0.0-rc.20", features = ["derive"] }
specta-typescript = "0.0.9"
wasm-bindgen = "0.2"
